# hello_rust_world

./: Cargo.toml
src/: main.rs
src/exercises/: No45.rs  empty.rs  input.rs  kazuate.rs  loop.rs  sosu.rs
src/reversi/: client.rs  client2.rs  hairetsu.rs  hairetsu2.rs  hairetsu3.rs  hairetsu4.rs  hairetsu5.rs  hairetsu6_score.rs  hairetsu7_points.rs  hairetsu8_reverse.rs  hairetsu9_min_score.rs
